package pw.edu.elka.rso.shard;

/** This class will hold local shard statistics like number of processed queries.
 */
public class ShardStatistics {
}
